# cookbook

./: .gitignore  AGENTS.md  BOOK_PLAN.md  CALENDAR_FACTS_BRIEF.md  Makefile  README.md  SCOPE-twitter-bot.md  book.md  pyproject.toml  refactor.md  tweet.md
book/: 00-prologue.md  01-shape-of-seventeen-years.md  02-topography-of-interest.md  03-rhythm-of-a-working-mind.md  04-numbers-that-keep-appearing.md  05-bestiary-of-functions.md  06-mathematicians-behind-theorems.md  07-languages-as-thinking-tools.md  08-cryptographys-moment.md  09-edges-of-the-map.md  10-interviews.md  11-evolution-of-a-blog.md  12-what-the-numbers-miss.md  99-epilogue.md  OUTLINE_V4.md  PRODUCTION_SPEC.md  README.md  appendix-a-by-the-numbers.md  appendix-b-reading-list.md  data-notes.md
bot/: FACTS_QA.md  README.md  build_facts.py  facts.json  post_fact.py  state.json
data/: REBUILD_PLAN.md  additional_phd_facts.csv  analyze_twitter.py  hn_facts.csv  johndcook_calendar_365.csv  johndcook_calendar_candidates_filtered.csv  johndcook_calendar_candidates_merged.csv  johndcook_calendar_candidates_v3.csv  johndcook_calendar_candidates_v3_cleaned.csv  johndcook_calendar_candidates_v4.csv  johndcook_calendar_facts.csv  johndcook_posts.jsonl  johndcook_posts_from_sql.jsonl  new_analysis_facts.csv  new_deep_analysis_facts.csv  posts_metadata.csv  rebuild.py  rebuild_calendar.py  test.sh
docs/: calendar-print-spec.md  legacy-scripts.md
scripts/: crawl_site.sh  explore_facts.py  generate_book_figures.py  generate_calendar_facts_opus.py  generate_chapter_1_visuals.py  generate_chapter_2_visuals.py  (+3 more)
(+149 files in other folders)
