[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookbook"
version = "0.1.0"
description = "Data tooling for johndcook.com calendar, book, and bot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tweepy>=4.14.0",
  "typer>=0.12.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "Pillow>=10.0.0",
]

[project.scripts]
cookbook = "cookbook.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
